# NSU

Lab1/src/: Main.java
OOP C++/: .gitignore  a.cpp
OOP C++/homeWorks/: SharedPointer.cpp
OOP C++/lab2/: Bigger.h  Command.h  Cr.h  Div.cpp  Div.h  Dot.cpp  Drop.cpp  Drop.h  Dup.h  Emit.cpp  Emit.h  Equal.h  If.h  Interpreter.cpp  Interpreter.h  Loop.h  Mod.h  Mul.cpp  Operands.h  Over.h  Reader.cpp  Rot.cpp  Rot.h  StringOutput.cpp  StringOutput.h  Sub.cpp  Sub.h  Test.cpp  Tokens.cpp  Utility.cpp  Utility.h  swap.h
OOP C++/lab3/: level.cpp  level.h  main.cpp  mainwindow.cpp  mainwindow.ui  view.cpp  view.h
OS/: hello  hello.c  hello2  hello2.c  hello3  hello3.c  hello_from_shared_lib.h  hello_from_static_lib.h
homeWorks/: strings.cpp
lab2/: Bigger.cpp  CMakeLists.txt  Command.cpp  Cr.cpp  Dot.h  Dup.cpp  Equal.cpp  Factory.h  FactoryComplexFuncInitializer.h  FactoryInitializer.h  If.cpp  Less.cpp  Less.h  Loop.cpp  Mod.cpp  Mul.h  Operands.cpp  Over.cpp  Reader.h  Sum.cpp  Sum.h  Tokens.h  main.cpp  swap.cpp
lab2/Resources/: GameField.txt
lab2/src/: KeyInputs.java  Main.java  Pacman.java  Test.java
lab2/src/collisions/: EntityMovement.java  PlayerCollisionWithItems.java  PlayerCollisions.java  PlayerMovement.java
lab2/src/entities/: Blinky.java  Clyde.java  Entity.java  Ghost.java  Inky.java  Pinky.java  Player.java
lab2/src/gameField/: GameField.java
lab2/src/utility/: Utility.java
lab2/src/view/: GamePanel.java  GameWindow.java
lab3/: CMakeLists.txt  fieldtype.h  level.cpp  level.h  mainwindow.cpp  mainwindow.h  view.cpp  view.h
(+112 files in other folders)
